# fx-desktop-qa-automation

./: .cron.yml  .gitignore  .report.json  .taskcluster.yml  BEST_PRACTICE.md  CLAUDE.md  OBJECT_MODELS.md  PROJECT_SUMMARY.md  Pipfile  README.md  SELECTOR_INFO.md  STABILITY_MONITORING.md  TESTRAIL_INTEGRATION.md  addtests.py  after  ai_prefs_dump.html  api_credentials.env  before  blocks.py  check_l10n_test_cases.py  check_test_cases.py  choose_ci_set.py  choose_l10n_beta_split.py  choose_l10n_ci_set.py  choose_test_channel.py  choose_test_split.py  ci_l10n_pyproject_headed.toml  ci_pyproject.toml  ci_pyproject_headed.toml  ci_xvfb_pyproject.toml  ci_xvfb_pyproject_headed.toml  collect_executables.py  collect_executables.sh  configuration.py  conftest.py  contents.html  contentschrome.html  create_secrets.py  create_suite_or_objs.py  dev_pyproject.toml  (+69 more)
.github/: pull_request_template.md
.github/workflows/: add-stability-results-to-bq.yml  check-beta-functional.yml  check-beta-l10n.yml  check-beta.yml  check-devedition.yml  ci-dispatch.yml  claude-review.yml  functional-test-beta.yml  l10n-write-mappings.yml  l10n.yml  l10n_smoke.yml  main-l10n.yml  main-stability.yml  main.yml  monthly-static-analysis.yml  notify-stability-state-changes.yml  smoke-test-beta.yml  smoke-test-devedition.yml  smoke-test-rc.yml  smoke.yml  stability-test-dispatch.yml  test-l10n-beta.yml  test-l10n.yml
archived_tests/incident/: test_bookmark_star.py  test_google_search_code.py  test_new_tab.py  test_youtube.py
config/: ci_headed_no_reruns_pyproject.toml  ci_headed_pyproject.toml  ci_no_reruns_pyproject.toml  ci_pyproject.toml  ci_pyproject_headed.toml  ci_pyproject_headed_no_reruns.toml  ci_pyproject_no_reruns.toml  ci_xvfb_headed_pyproject.toml  ci_xvfb_pyproject.toml  ci_xvfb_pyproject_headed.toml  dev_pyproject.toml
dashboards/: stability.dashboard.lookml
data/: Chrome_Bookmarks  Chrome_Local_State  Chrome_Passwords  Edge_Bookmarks  basic_webpage.html  notification_test.html  text_test.html
data/pages/: mp3_download.html
data/secrets/: gmail.json  gmail_accounts
dll_check/: check_dll_interceptors.py
html_pages/: mime_type_doc.html
l10n_CM/: README.md  conftest.py  run_l10n.py  test_demo_ad_clear_address_fields.py
l10n_CM/CA/: test_ca_demo_cc_add_new_credit_card.py
l10n_CM/DE/: conftest.py  test_de_demo_cc_add_new_credit_card.py
l10n_CM/FR/: conftest.py  test_fr_demo_cc_add_new_credit_card.py
l10n_CM/US/: conftest.py  test_us_demo_address_doorhanger_displayed_after_entering_valid_address.py  test_us_demo_address_email_phone_captured_in_doorhanger_and_stored.py  test_us_demo_cc_add_new_credit_card.py  test_us_demo_cc_check_doorhanger_is_displayed.py
l10n_CM/Unified/: conftest.py  test_demo_ad_0_add_new_address.py  test_demo_ad_1a_dropdown_name_org_fields.py  test_demo_ad_1b_dropdown_address_fields.py  test_demo_ad_1c_dropdown_phone_email_fields.py  test_demo_ad_2a_preview_name_org_fields.py  test_demo_ad_2b_preview_address_fields.py  test_demo_ad_2c_preview_phone_email_fields.py  test_demo_ad_3a_autofill_address_fields.py  test_demo_ad_3b_autofill_name_org_fields.py  test_demo_ad_3c_autofill_phone_email_fields.py  test_demo_ad_4a_highlight_name_org_fields.py  test_demo_ad_4b_highlight_address_fields.py  test_demo_ad_4c_highlight_phone_email_fields.py  test_demo_ad_5a_clear_name_org_fields.py  test_demo_ad_5b_clear_address_fields.py  test_demo_ad_5c_clear_phone_email_fields.py  test_demo_ad_6_capture_doorhanger_appearance.py  test_demo_ad_7a_capture_doorhanger_stored_data_name_org_fields.py  test_demo_ad_7b_capture_doorhanger_stored_data_address_fields.py  test_demo_ad_7c_capture_doorhanger_stored_data_phone_email.py  test_demo_ad_address_data_captured_in_doorhanger_and_stored.py  test_demo_ad_autofill_address_fields.py  test_demo_ad_autofill_dropdown_present_for_email_and_phone.py  (+41 more)
manifests/: all.yaml  ci.yaml  functional.yaml  incident.yaml  key.yaml  smoke.yaml  testkey.py
models/: stability_analytics.model.lkml
modules/: autofill_object.py  autofill_object_save_info.py  browser_object.py  browser_object_about_downloads_context_menu.py  browser_object_about_prefs_cc_popup.py  browser_object_about_telemetry.py  browser_object_autofill_popup.py  browser_object_context_menu.py  browser_object_credit_card_popup.py  browser_object_devtools.py  browser_object_find_toolbar.py  browser_object_forget_panel.py  browser_object_glean.py  browser_object_hyperlink_context_menu.py  browser_object_image_context_menu.py  browser_object_menu_bar.py  browser_object_navigation.py  browser_object_panel_ui.py  browser_object_pdf_viewer.py  browser_object_print_preview.py  browser_object_reader_view.py  browser_object_search_bar_context_menu.py  browser_object_sidebar.py  browser_object_tab_context_menu.py  browser_object_tabbar.py  browser_object_toolbar.py  browser_object_tracker_panel.py  browser_object_trust_panel.py  crypto.py  page_base.py  page_object.py  page_object_about_addons.py  page_object_about_blank.py  page_object_about_config.py  page_object_about_crash.py  page_object_about_downloads.py  page_object_about_glean.py  page_object_about_logins.py  page_object_about_newtab.py  page_object_about_pages.py  (+36 more)
profiles/: README.md
scripts/: add_stability_json_to_bq.py  addtests.py  blocks.py  check_reportable.sh  check_reportable_splits.sh  check_test_cases.py  choose_l10n_beta_split.py  choose_l10n_ci_set.py  choose_test_channel.py  choose_test_split.py  choose_test_type.py  collect_executables.py  collect_executables.sh  fixturize_test_cases.py  flake_test.sh  functional_test_beta_preview_plan.sh  gen_codename.py  get_codename.py  keyring-unlock.sh  new_model.py  notifier.py  notify_stability_state_changes.py  parse_executables.sh  pre-commit  preview_plan.py  profilizer.sh  reportable_splits.py  run_commit_tests.py  setup-xauthority.sh  setup_python.sh  switch_config.py  test_beta_preview_plan.sh  validate_cases.py
taskcluster/: config.yml  requirements.in  requirements.txt
test_cases/: test_create_test_case_button.py
views/: stability_test_events.view.lkml
(+1312 files in other folders)
