[project]
name = "qa-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alabaster==0.7.16 ; python_full_version >= '3.9'",
  "annotated-doc==0.0.4 ; python_full_version >= '3.8'",
  "annotated-types==0.7.0 ; python_full_version >= '3.8'",
  "anyio==4.13.0 ; python_full_version >= '3.10'",
  "appdirs==1.4.4",
  "arrow==1.4.0 ; python_full_version >= '3.8'",
  "astatine==0.3.3 ; python_full_version >= '3.6'",
  "astpretty==3.0.0 ; python_full_version >= '3.8'",
  "astroid==2.15.8 ; python_full_version >= '3.7.2'",
  "asttokens==3.0.1 ; python_full_version >= '3.8'",
  "attrs==26.1.0 ; python_full_version >= '3.9'",
  "autoflake==1.7.8 ; python_full_version >= '3.7'",
  "babel==2.18.0 ; python_full_version >= '3.8'",
  "bandit==1.9.4 ; python_full_version >= '3.10'",
  "beautifulsoup4==4.12.3 ; python_full_version >= '3.6'",
  "binaryornot==0.6.0 ; python_full_version >= '3.10'",
  "brotli==1.2.0",
  "cachetools==5.5.2 ; python_full_version >= '3.7'",
  "certifi==2026.5.20 ; python_full_version >= '3.7'",
  "cffi==2.0.0 ; platform_python_implementation != 'PyPy'",
  "chardet==7.4.3 ; python_full_version >= '3.10'",
  "charset-normalizer==3.4.7 ; python_full_version >= '3.7'",
  "click==8.4.1 ; python_full_version >= '3.10'",
  "cognitive-complexity==1.3.0 ; python_full_version >= '3.6'",
  "colorama==0.4.6 ; python_full_version >= '2.7'",
  "cookiecutter==2.7.1 ; python_full_version >= '3.10'",
  "coverage[toml]==7.14.1 ; python_full_version >= '3.10'",
  "darglint==1.8.1 ; python_full_version >= '3.6' and python_full_version < '4.0'",
  "dill==0.4.1 ; python_full_version >= '3.11'",
  "distlib==0.4.1",
  "doc8==1.1.2 ; python_full_version >= '3.8'",
  "docformatter==1.7.8 ; python_full_version >= '3.10' and python_full_version < '4.0'",
  "docutils==0.19 ; python_full_version >= '3.7'",
  "domdf-python-tools==3.10.0 ; python_full_version >= '3.6'",
  "eradicate==2.3.0",
  "execnet==2.1.2 ; python_full_version >= '3.8'",
  "faker==26.3.0 ; python_full_version >= '3.8'",
  "filelock==3.29.0 ; python_full_version >= '3.10'",
  "giturlparse==0.14.0 ; python_full_version >= '3.8'",
  "google-api-core[grpc]==2.30.3 ; python_full_version >= '3.9'",
  "google-auth==2.32.0 ; python_full_version >= '3.7'",
  "google-cloud-bigquery==3.27.0 ; python_full_version >= '3.7'",
  "google-cloud-core==2.6.0 ; python_full_version >= '3.10'",
  "google-cloud-storage==2.18.0 ; python_full_version >= '3.7'",
  "google-crc32c==1.8.0 ; python_full_version >= '3.9'",
  "google-resumable-media==2.9.0 ; python_full_version >= '3.10'",
  "googleapis-common-protos==1.75.0 ; python_full_version >= '3.9'",
  "grpcio==1.81.0",
  "grpcio-status==1.81.0",
  "h11==0.16.0 ; python_full_version >= '3.8'",
  "hawkauthlib==2.0.0",
  "idna==3.18 ; python_full_version >= '3.9'",
  "imagesize==2.0.0 ; python_full_version >= '3.10' and python_full_version < '3.15'",
  "iniconfig==2.3.0 ; python_full_version >= '3.10'",
  "isort==5.13.2 ; python_full_version >= '3.8'",
  "jinja2==3.1.6 ; python_full_version >= '3.7'",
  "json-e==4.8.2",
  "jsonpath-ng==1.6.1",
  "lark-parser==0.12.0",
  "lazy-object-proxy==1.12.0 ; python_full_version >= '3.9'",
  "markdown-it-py==4.2.0 ; python_full_version >= '3.10'",
  "markupsafe==3.0.3 ; python_full_version >= '3.9'",
  "mdurl==0.1.2 ; python_full_version >= '3.7'",
  "mouseinfo==0.1.3",
  "mozilla-repo-urls==0.2.2 ; python_full_version >= '3.11'",
  "mr-proper==0.0.7",
  "mypy-extensions==1.1.0 ; python_full_version >= '3.8'",
  "natsort==8.4.0 ; python_full_version >= '3.7'",
  "numpy==2.4.2",
  "opencv-python==4.13.0.92 ; python_full_version >= '3.6'",
  "outcome==1.3.0.post0 ; python_full_version >= '3.7'",
  "packaging==26.2 ; python_full_version >= '3.8'",
  "pathspec==1.1.1 ; python_full_version >= '3.9'",
  "pep8-naming==0.15.1 ; python_full_version >= '3.9'",
  "pillow==12.2.0 ; python_full_version >= '3.8'",
  "pip==26.1 ; python_full_version >= '3.7'",
  "platformdirs==4.10.0 ; python_full_version >= '3.10'",
  "pluggy==1.6.0 ; python_full_version >= '3.9'",
  "ply==3.11",
  "proto-plus==1.28.0 ; python_full_version >= '3.10'",
  "protobuf==7.35.0 ; python_full_version >= '3.10'",
  "psutil==6.0.0 ; python_full_version >= '2.7'",
  "pyasn1==0.6.3 ; python_full_version >= '3.8'",
  "pyasn1-modules==0.4.2 ; python_full_version >= '3.8'",
  "pyautogui==0.9.54",
  "pycodestyle==2.9.1 ; python_full_version >= '3.6'",
  "pycparser==3.0 ; implementation_name != 'PyPy'",
  "pydantic==2.13.4 ; python_full_version >= '3.9'",
  "pydantic-core==2.46.4 ; python_full_version >= '3.9'",
  "pydocstyle==6.3.0 ; python_full_version >= '3.6'",
  "pyemojify==0.2.0",
  "pyflakes==2.5.0 ; python_full_version >= '3.6'",
  "pyfxa==0.8.1 ; python_full_version >= '3.8'",
  "pygetwindow==0.0.9",
  "pygments==2.20.0 ; python_full_version >= '3.9'",
  "pyjwt==2.13.0 ; python_full_version >= '3.9'",
  "pymsgbox==2.0.1 ; python_full_version >= '3.4'",
  "pyobjc-core==12.2 ; sys_platform == 'darwin'",
  "pyobjc-framework-cocoa==12.2 ; python_full_version >= '3.10' and sys_platform == 'darwin'",
  "pyobjc-framework-quartz==12.2 ; sys_platform == 'darwin'",
  "pyperclip==1.11.0",
  "pypom==2.2.4",
  "pyproject-api==1.10.1 ; python_full_version >= '3.10'",
  "pyrect==0.2.0",
  "pyscreeze==1.0.1",
  "pysocks==1.7.1 ; python_full_version >= '2.7'",
  "pytest==7.4.4 ; python_full_version >= '3.7'",
  "pytest-cov==4.1.0 ; python_full_version >= '3.7'",
  "pytest-html==4.1.1 ; python_full_version >= '3.8'",
  "pytest-httpserver==1.0.12 ; python_full_version >= '3.8'",
  "pytest-json-report==1.5.0",
  "pytest-metadata==3.1.1 ; python_full_version >= '3.8'",
  "pytest-rerunfailures==14.0 ; python_full_version >= '3.8'",
  "pytest-sugar==0.9.7",
  "pytest-timeout==2.3.1 ; python_full_version >= '3.7'",
  "pytest-xdist==3.6.1 ; python_full_version >= '3.8'",
  "python-dateutil==2.9.0.post0 ; python_full_version >= '2.7'",
  "python-discovery==1.4.0 ; python_full_version >= '3.8'",
  "python-slugify==8.0.4 ; python_full_version >= '3.7'",
  "python3-xlib==0.15",
  "pytweening==1.2.0",
  "pyupgrade==3.21.2 ; python_full_version >= '3.10'",
  "pyyaml==6.0.3 ; python_full_version >= '3.8'",
  "redo==3.0.0",
  "removestar==1.5.2 ; python_full_version >= '3.7'",
  "requests==2.34.2 ; python_full_version >= '3.10'",
  "restructuredtext-lint==2.0.2",
  "rich==15.0.0 ; python_full_version >= '3.9'",
  "rsa==4.9.1 ; python_full_version >= '3.6' and python_full_version < '4.0'",
  "rubicon-objc==0.5.4 ; sys_platform == 'darwin'",
  "ruff==0.9.6 ; python_full_version >= '3.7'",
  "selenium==4.23.1 ; python_full_version >= '3.8'",
  "setuptools==82.0.1 ; python_full_version >= '3.9'",
  "shellingham==1.5.4 ; python_full_version >= '3.7'",
  "six==1.17.0 ; python_full_version >= '2.7'",
  "slack-sdk==3.31.0 ; python_full_version >= '3.6'",
  "slugid==2.0.0",
  "sniffio==1.3.1 ; python_full_version >= '3.7'",
  "snowballstemmer==3.1.0 ; python_full_version >= '3.3'",
  "sortedcontainers==2.4.0",
  "soupsieve==2.8.4 ; python_full_version >= '3.9'",
  "sphinx==6.2.1 ; python_full_version >= '3.8'",
  "sphinxcontrib-applehelp==2.0.0 ; python_full_version >= '3.9'",
  "sphinxcontrib-devhelp==2.0.0 ; python_full_version >= '3.9'",
  "sphinxcontrib-htmlhelp==2.1.0 ; python_full_version >= '3.9'",
  "sphinxcontrib-jsmath==1.0.1 ; python_full_version >= '3.5'",
  "sphinxcontrib-qthelp==2.0.0 ; python_full_version >= '3.9'",
  "sphinxcontrib-serializinghtml==2.0.0 ; python_full_version >= '3.9'",
  "ssort==0.16.0 ; python_full_version >= '3.9'",
  "starlette==1.3.1 ; python_full_version >= '3.10'",
  "stdlib-list==0.12.0 ; python_full_version >= '3.9'",
  "stevedore==5.8.0 ; python_full_version >= '3.10'",
  "taskcluster-taskgraph==9.0.0",
  "taskcluster-urls==13.0.2",
  "termcolor==3.3.0 ; python_full_version >= '3.10'",
  "text-unidecode==1.3",
  "tokenize-rt==6.2.0 ; python_full_version >= '3.9'",
  "toml>=0.10.2",
  "tomlkit==0.15.0 ; python_full_version >= '3.9'",
  "trio==0.33.0 ; python_full_version >= '3.10'",
  "trio-websocket==0.12.2 ; python_full_version >= '3.8'",
  "typer==0.26.6 ; python_full_version >= '3.10'",
  "typing-extensions==4.15.0 ; python_full_version >= '3.9'",
  "typing-inspect==0.9.0",
  "typing-inspection==0.4.2 ; python_full_version >= '3.9'",
  "tzdata==2026.2 ; python_full_version >= '3.9'",
  "urllib3[socks]==2.7.0 ; python_full_version >= '3.10'",
  "virtualenv==21.4.2 ; python_full_version >= '3.8'",
  "voluptuous==0.16.0 ; python_full_version >= '3.9'",
  "webob==1.8.10 ; python_full_version >= '2.7'",
  "websocket-client==1.9.0 ; python_full_version >= '3.9'",
  "werkzeug==3.1.8 ; python_full_version >= '3.9'",
  "wrapt==1.17.3 ; python_full_version >= '3.11'",
  "wsproto==1.3.2 ; python_full_version >= '3.10'",
  "zope-component==7.1 ; python_full_version >= '3.10'",
  "zope-event==6.2 ; python_full_version >= '3.10'",
  "zope-hookable==8.2 ; python_full_version >= '3.10'",
  "zope-interface==8.5 ; python_full_version >= '3.10'",
]

[tool.ruff]
target-version = "py313"

[tool.pytest.ini_options]
generate_report_on_test = false
addopts = "-vs --html=report.html"
log_cli = true
log_cli_level = "info"
markers = [
  "audio: test is reliant on audio",
  "headed: test must run in headed mode (uses desktop input automation)",
  "incident: incident smoke tests",
  "unstable: temporary mark for unstable tests",
  "slow: test is clocked at more than 30s on modern machines",
  "ci: basic tests to run in ci",
  "locale_de: tests run in DE locale versions",
  "locale_fr: tests run in FR locale versions",
  "locale_gb: tests run in GB locale versions",
  "noxvfb: tests that should not run in xvfb sessions",
]

[tool.ruff.lint.per-file-ignores]
"modules/*.py" = [ "F403",]
